# chip8_emu

./: Cargo.toml  README.md  shell.nix
src/: alu.rs  cpu.rs  devices.rs  lib.rs  main.rs  ui.rs
