[package]
name = "chip8_emu"
version = "0.1.0"
edition = "2021"


# [build-dependencies]
# tauri-build = "1"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.21"
rand = "0.8.5"
sdl2 = "0.36.0"
# tauri = { version = "1", features = ["custom-protocol"] }

# [profile.release]
# incremental = false
# codegen-units = 1
# panic = "abort"
# opt-level = "s"
# lto = true
